# rust-csharp-interop

./: Cargo.toml  build.rs  project.csproj
src/: main.rs
