[package]
author = "CEbbinghaus"
name = "csharp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.5", features = ["derive"] }
netcorehost = "0.17.0"
climeta = { git = "https://github.com/Boddlnagg/climeta" }

# [profile.dev]
# debug-assertions = false
